git restore --staged<file>...

--- a/index.html
+++ b/index.html
@@ -1,21 +1,52 @@
-<html>
-    <head>
-        <title>
-            Olá, eu sou a cabeça 
-        </title>
-    </head>
-    <body>
-        <h1>Eu sou o corpo</h1>
-        <h2>Eu sou o corpo</h2>
-    </body>
-    <ol>
-        <li>Cafe</li>
-        <li>Suco</li>
-        <li>Leite</li>
-    </ol>
-    <ul>
-        <li>Cafe</li>
-        <li>Suco</li>
-        <li>Leite</li>
-    </ul>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Felipe Batista CV</title>
+
+    <link rel="stylesheet" href="style.css">    
+
+</head>
+<body>
+    <main class="resume-contents">
+        <section class="left-section">
+            <section class="left-section-content">
+                <div class="profile">
+                    <img class="profile-image" src="img/profileimage.jpeg" alt="Profile image"  height="400" width="80">
+                    <p class="name">Felipe Batista</p>
+                    <p class="profession">Developer</p>
+                </div>
+                <div class="contact-info">
+                    <p class="left-title">Contato</p>
+                    <ul>
+                        <li><i class="fa fa-phone"></i>+55 61 98495-5354</li>
+                        <li><i class="fa fa-envelope"></i>lipeebatista860@gmail.com</li>
+                        <li><i class="fa fa-globe"></i></li>
+                        <li><i class="fa fa-github"></i>felipebatista</li>
+                    </ul>
+                </div>
+                <div class="skills">
+                    <p class="left-title">Skills</p>
+                    <ul>
+                        <li><p>HTML, CSS, Java </p></li>
+                    </ul>
+                </div>
+            </section>
+            </section>
+            <section class="right-section">
+                <div class="right-section-contents">
+                    <section class="about gap">
+                        <div class="right-title">Sobre Mim</div><br>
+                        <p class="about-me-contents">
+                           Olá, me chamo Felipe.<br>
+                           <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistema (ADS) 
+                           <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos, tenho aprendido bastatante coisa na área de programação. Sou apaixonado por tecnologia e estou buscando aprender cada vez mais para agregar conhecimento.       
+                        </p>
+                    </section>
+                </div>
+            </section>
+    </main>
+</body>
 </html>
