--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <section class="left-section">
             <section class="left-section-content">
                 <div class="profile">
-                    <img class="profile-image" src="img/profileimage.jpeg" alt="Profile image"  height="400" width="80">
+                    <img class="profile-image" src="img/profileimage.jpeg" alt="Profile image">
                     <p class="name">Felipe Batista</p>
                     <p class="profession">Developer</p>
                 </div>
@@ -41,11 +41,46 @@
                         <div class="right-title">Sobre Mim</div><br>
                         <p class="about-me-contents">
                            Olá, me chamo Felipe.<br>
-                           <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistema (ADS) 
-                           <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos, tenho aprendido bastatante coisa na área de programação. Sou apaixonado por tecnologia e estou buscando aprender cada vez mais para agregar conhecimento.       
+                           <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistema (ADS). 
+                           <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos, venho me aperfeiçoando a cada dia na área de programação. Sou apaixonado por tecnologia e estou buscando aprender cada vez mais para agregar conhecimento.       
                         </p>
                     </section>
                 </div>
+            <section class="experience gap">
+                <div class="right-title">Experiencia</div>
+                <div class="experience-contents">
+                    <div class="exp-left">
+                        <p class="exp-company-name">Produtora Picnik</p>
+                        <p class="exp-time-period">2022-Present</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Auxiliar de Produção</p>
+                        <p class="exp-desc">
+                           Curadoria de marcar para a participação do evento, contato com expositores e resolução de problemas.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">A Garimpeira</p>
+                        <p class="exp-time-period">2020-2021</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Coordenador de Vendas</p>
+                        <p class="exp-desc">
+                            Treinamento de equipe, vitrine, administrativo, vendas e repositor de estoque.
+                        </p>
+                    </div>
+                    <div class="exp-left">
+                        <p class="exp-company-name">Cobogó Mercado de Objetos</p>
+                        <p class="exp-time-period">2017-2019</p>
+                    </div>
+                    <div class="exp-right">
+                        <p class="exp-position">Gerente de loja</p>
+                        <p class="exp-desc">
+                            Treinamento de equipe, vitrine, administrativo, vendas, repositor de estoque e promotor de eventos.
+                        </p>
+                    </div>
+                </div>
+            </section>    
             </section>
     </main>
 </body>
