feature:add education

--- a/index.html
+++ b/index.html
@@ -1,14 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Felipe Batista CV</title>
 
-    <link rel="stylesheet" href="style.css">    
+    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
     <main class="resume-contents">
         <section class="left-section">
@@ -30,24 +32,28 @@
                 <div class="skills">
                     <p class="left-title">Skills</p>
                     <ul>
-                        <li><p>HTML, CSS, Java </p></li>
+                        <li>
+                            <p>HTML, CSS, Java </p>
+                        </li>
                     </ul>
                 </div>
             </section>
-            </section>
-            <section class="right-section">
-                <div class="right-section-contents">
-                    <section class="about gap">
-                        <div class="right-title">Sobre Mim</div><br>
-                        <p class="about-me-contents">
-                           Olá, me chamo Felipe.<br>
-                           <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistema (ADS). 
-                           <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos, venho me aperfeiçoando a cada dia na área de programação. Sou apaixonado por tecnologia e estou buscando aprender cada vez mais para agregar conhecimento.       
-                        </p>
-                    </section>
-                </div>
+        </section>
+        <section class="right-section">
+            <div class="right-section-contents">
+                <section class="about gap">
+                    <div class="right-title">Sobre Mim</div><br>
+                    <p class="about-me-contents">
+                        Olá, me chamo Felipe.<br>
+                        <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistemas (ADS).
+                        <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos online,
+                        venho a cada dia me aperfeiçoando na área de programação. Sou apaixonado por tecnologia e estou
+                        buscando aprender cada vez mais para agregar conhecimento.
+                    </p>
+                </section>
+            </div>
             <section class="experience gap">
-                <div class="right-title">Experiencia</div>
+                <div class="right-title">Experiência</div>
                 <div class="experience-contents">
                     <div class="exp-left">
                         <p class="exp-company-name">Produtora Picnik</p>
@@ -56,7 +62,8 @@
                     <div class="exp-right">
                         <p class="exp-position">Auxiliar de Produção</p>
                         <p class="exp-desc">
-                           Curadoria de marcar para a participação do evento, contato com expositores e resolução de problemas.
+                            Curadoria de marcas para a participação do evento, contato com expositores e resolução de
+                            problemas.
                         </p>
                     </div>
                     <div class="exp-left">
@@ -76,12 +83,58 @@
                     <div class="exp-right">
                         <p class="exp-position">Gerente de loja</p>
                         <p class="exp-desc">
-                            Treinamento de equipe, vitrine, administrativo, vendas, repositor de estoque e promotor de eventos.
+                            Treinamento de equipe, vitrine, administrativo, vendas, repositor de estoque e promotor de
+                            eventos.
                         </p>
                     </div>
                 </div>
-            </section>    
             </section>
+            <section class="education gap">
+                <div class="right-title">Formação Acadêmica</div>
+                <div class="education-contents">
+                <div class="education-left">
+                    <p class="education-school-name">UDF</p>
+                    <p class="education-time-period">2022-Present</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Análise e Desenvolvimento</p>
+                    <p class="education-desc">
+                        Graduação
+                    </p>
+                </div>
+                <div class="education-left">
+                    <p class="education-school-name">IFB</p>
+                    <p class="education-time-period">2022</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Linguagem Swift</p>
+                    <p class="education-desc">
+                        Curso
+                    </p>
+                </div>
+                <div class="education-left">
+                    <p class="education-school-name">Udemy</p>
+                    <p class="education-time-period">2021</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Introdução a Linguagem de Programação</p>
+                    <p class="education-desc">
+                        Curso
+                    </p>
+                </div>
+                <div class="education-left">
+                    <p class="education-school-name">Mont Blanc</p>
+                    <p class="education-time-period">2014</p>
+                </div>
+                <div class="education-right">
+                    <p class="education-subject">Ensino Médio</p>
+                    <p class="education-desc">
+                        Ensino Médio
+                    </p>
+                </div>
+            </section>
+        </section>
     </main>
 </body>
+
 </html>
