feature: add courses

--- a/index.html
+++ b/index.html
@@ -46,7 +46,8 @@
                     <p class="about-me-contents">
                         Olá, me chamo Felipe.<br>
                         <br>Sou estudante no segundo periodo de Análise e Desenvolvimento de Sistemas (ADS).
-                        <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos online,
+                        <br>Com o curso que estou fazendo na UDF (Universidade do Distrito Federal) entre outros cursos
+                        online,
                         venho a cada dia me aperfeiçoando na área de programação. Sou apaixonado por tecnologia e estou
                         buscando aprender cada vez mais para agregar conhecimento.
                     </p>
@@ -92,45 +93,60 @@
             <section class="education gap">
                 <div class="right-title">Formação Acadêmica</div>
                 <div class="education-contents">
-                <div class="education-left">
-                    <p class="education-school-name">UDF</p>
-                    <p class="education-time-period">2022-Present</p>
-                </div>
-                <div class="education-right">
-                    <p class="education-subject">Análise e Desenvolvimento</p>
-                    <p class="education-desc">
-                        Graduação
-                    </p>
-                </div>
-                <div class="education-left">
-                    <p class="education-school-name">IFB</p>
-                    <p class="education-time-period">2022</p>
-                </div>
-                <div class="education-right">
-                    <p class="education-subject">Linguagem Swift</p>
-                    <p class="education-desc">
-                        Curso
-                    </p>
-                </div>
-                <div class="education-left">
-                    <p class="education-school-name">Udemy</p>
-                    <p class="education-time-period">2021</p>
-                </div>
-                <div class="education-right">
-                    <p class="education-subject">Introdução a Linguagem de Programação</p>
-                    <p class="education-desc">
-                        Curso
-                    </p>
-                </div>
-                <div class="education-left">
-                    <p class="education-school-name">Mont Blanc</p>
-                    <p class="education-time-period">2014</p>
-                </div>
-                <div class="education-right">
-                    <p class="education-subject">Ensino Médio</p>
-                    <p class="education-desc">
-                        Ensino Médio
-                    </p>
+                    <div class="education-left">
+                        <p class="education-school-name">UDF</p>
+                        <p class="education-time-period">2022-Present</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Análise e Desenvolvimento</p>
+                        <p class="education-desc">
+                            Graduação
+                        </p>
+                    </div>
+                    <div class="education-left">
+                        <p class="education-school-name">Mont Blanc</p>
+                        <p class="education-time-period">2014</p>
+                    </div>
+                    <div class="education-right">
+                        <p class="education-subject">Ensino Médio</p>
+                        <p class="education-desc">
+                            Ensino Médio
+                        </p>
+                    </div>
+            </section>
+            <section class="awards gap">
+                <div class="right-title">Cursos</div>
+                <div class="awards-contents">
+                    <div class="awards-left">
+                        <p class="awards-company-name">EBAC</p>
+                        <p class="awards-time-period">Setembro/Outubro de 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Jornada DEV</p>
+                        <p class="awards-desc">
+                           Jornada de desenvolvimento feito na EBAC no ano de 2022 
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">IFB</p>
+                        <p class="awards-time-period">Julho de 2022</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Linguagem Swift</p>
+                        <p class="awards-desc">
+                           Curso feito no IFB no ano de 2022 
+                        </p>
+                    </div>
+                    <div class="awards-left">
+                        <p class="awards-company-name">Udemy</p>
+                        <p class="awards-time-period">Novembro de 2021</p>
+                    </div>
+                    <div class="awards-right">
+                        <p class="awards-name">Introdução a Linguagem de Programação</p>
+                        <p class="awards-desc">
+                           Curso feito na Udemy no ano de 2021 
+                        </p>
+                    </div>
                 </div>
             </section>
         </section>
