--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
                     <ul>
                         <li><i class="fa fa-phone"></i>+55 61 98495-5354</li>
                         <li><i class="fa fa-envelope"></i>lipeebatista860@gmail.com</li>
-                        <li><i class="fa fa-globe"></i></li>
+                        <li><i class="fa fa-globe"></i>https://felipeebatista.github.io</li>
                         <li><i class="fa fa-github"></i>felipebatista</li>
                     </ul>
                 </div>
